--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1,5 +1,7 @@
 
 
+
+---
 ## 1.两数之和
 
 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
@@ -36,6 +38,8 @@ console.log(result);
 
 
 
+
+---
 ## 2.两数相加
 
 给你两个 非空 的链表，表示两个非负的整数。它们每位数字都是按照 逆序 的方式存储的，并且每个节点只能存储 一位 数字。
@@ -109,6 +113,8 @@ var addTwoNumbers = function(l1, l2) {
 
 
 
+
+---
 ## 3. 无重复字符的最长子串
 
 给定一个字符串 `s` ，请你找出其中不含有重复字符的 **最长子串** 的长度。
@@ -170,6 +176,8 @@ console.log(result);
 
 
 
+
+---
 ## 4. 寻找两个正序数组的中位数
 
 给定两个大小分别为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。请你找出并返回这两个正序数组的 中位数 。
@@ -230,6 +238,8 @@ let result=findMedianSortedArrays(str1,str2);
 console.log(result);
 ```
 
+
+---
 ## 5. 最长回文子串
 
 给你一个字符串 s，找到 s 中最长的回文子串。
@@ -352,6 +362,8 @@ console.log(result);
 
 
 
+
+---
 ## 6.Z 字形变换
 
 将一个给定字符串 s 根据给定的行数 numRows ，以从上往下、从左到右进行 Z 字形排列。
@@ -435,6 +447,8 @@ var convert = function(s, numRows) {
 
 
 
+
+---
 ## 7. 整数反转
 
 给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
@@ -479,6 +493,8 @@ public class TestOperateString{
 
 注意检查是否溢出
 
+
+---
 ## 8. 字符串转换整数 (atoi)
 
 请你来实现一个 myAtoi(string s) 函数，使其能将字符串转换成一个 32 位有符号整数（类似 C/C++ 中的 atoi 函数）。
@@ -559,8 +575,12 @@ let result=myAtoi(str1);
 console.log(result);
 ```
 
+
+---
 ### 
 
+
+---
 ## 9.回文数
 
 给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。
@@ -595,6 +615,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 10. 正则表达式匹配
 
 给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
@@ -688,6 +710,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 11.盛最多水的容器
 
 给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。
@@ -736,6 +760,8 @@ console.log(result);
 
 
 
+
+---
 ## 13. 罗马数字转整数
 
 罗马数字包含以下七种字符: I， V， X， L，C，D 和 M。
@@ -836,6 +862,8 @@ let result=romanToInt(str1);
 console.log(result);
 ```
 
+
+---
 ## 14. 最长公共前缀
 
 编写一个函数来查找字符串数组中的最长公共前缀。
@@ -884,6 +912,8 @@ console.log(result);
 逐个对比，返回两两元素的公共前缀
 将 2 中的公共前缀和下一个元素对比，得到新的公共前缀
 
+
+---
 ## 15. 三数之和
 
 给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？请你找出所有和为 0 且不重复的三元组。
@@ -1074,10 +1104,57 @@ console.log(result);
 
 简化，直接使用双指针
 
+```js
+function threeNumberSum(nums){
+	nums=nums.sort((a,b)=>a-b);  //排序
+	let n=nums.length;
+	const ans=[];
+	let sum=0;
+	//枚举第一个数字
+	for (let first=0; first<n; first++){
+		// 需要和上一次枚举的数不相同
+		if (nums[first]>0) {
+			//first元素大于0后，后面sum不可能等于0
+			break;
+		}
+		if (first>0 && nums[first]===nums[first-1]){
+			continue;
+		}
+		//第三个数对应的指针初始指向数组的最右端
+		let third=n-1;
+		let target=-nums[first];
+		for (let second=first+1; second<n; second++){
+			if (nums[second] > target) {
+				//前两个元素和已经大于0，则再加第三个一定大于0;
+				break;
+			}
+			// 需要和上一次枚举的数不相同
+			if (second>first+1 && nums[second]===nums[second-1]) {
+				continue;
+			}
+			// 需要保证 second 的指针在 third 的指针的左侧
+			while(second<third && nums[second]+nums[third]>target){
+				third--;
+			}
+			// 如果指针重合，随着 second 后续的增加
+			// 就不会有满足 a+b+c=0 并且 b<c 的 c 了，可以退出循环
+			if (second===third) {
+				break;
+			}
+			if (nums[second]+nums[third]===target) {
+				ans.push([nums[first],nums[second],nums[third]]);
+			}
+		}
+	}
+	return ans;
+}
+
+let test=[-1, 0, 1, 2, -1, -4];
+console.log(threeNumberSum(test));  // [ [ -1, -1, 2 ], [ -1, 0, 1 ] ]
 ```
 
-```
 
+---
 ## 20. 有效的括号
 
 给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。
@@ -1142,6 +1219,8 @@ let result=isValid(str1);
 console.log(result);
 ```
 
+
+---
 ## 21.合并两个有序链表
 
 将两个升序链表合并为一个新的 升序 链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
@@ -1272,6 +1351,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 26.删除有序数组中的重复项
 
 给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。
@@ -1340,6 +1421,8 @@ var removeDuplicates = function(nums) {
 - 空间复杂度：O(1)。只需要使用常数的额外空间。
 
 
+
+---
 ## 27. 移除元素
 
 给你一个数组 nums 和一个值 val，你需要 原地 移除所有数值等于 val 的元素，并返回移除后数组的新长度。
@@ -1388,6 +1471,8 @@ console.log(result);
 
 ![移除元素双指针](E:\pogject\学习笔记\image\leetcode\移除元素双指针.png)
 
+
+---
 ## 28. 实现 strStr()
 
 给你两个字符串 haystack 和 needle ，请你在 haystack 字符串中找出 needle 字符串出现的第一个位置（下标从 0 开始）。如果不存在，则返回  -1 。
@@ -1486,6 +1571,8 @@ var strStr=function(haystack,needle){
 
 ```
 
+
+---
 ## 29.两数相除
 
 给定两个整数，被除数 dividend 和除数 divisor。将两数相除，要求不使用乘法、除法和 mod 运算符。
@@ -1686,6 +1773,8 @@ let result=divide(str1,str2);
 console.log(result);
 ```
 
+
+---
 ## 35. 搜索插入位置
 
 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
@@ -1759,6 +1848,8 @@ let result=searchInsert(test,1);
 console.log(result);
 ```
 
+
+---
 ## 53. 最大子数组和
 
 给你一个整数数组 nums ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
@@ -1803,6 +1894,8 @@ console.log(result);
 
 
 
+
+---
 ## 58. 最后一个单词的长度
 
 给你一个字符串 s，由若干单词组成，单词前后用一些空格字符隔开。返回字符串中最后一个单词的长度。
@@ -1841,6 +1934,8 @@ let result=lengthOfLastWord(test);
 console.log(result);
 ```
 
+
+---
 ## 66. 加一
 
 给定一个由 整数 组成的 非空 数组所表示的非负整数，在该数的基础上加一。
@@ -1876,6 +1971,8 @@ var plusOne = function(digits) {
 };
 ```
 
+
+---
 ## 67. 二进制求和
 
 给你两个二进制字符串，返回它们的和（用二进制表示）。
@@ -1943,6 +2040,8 @@ console.log(result);
 
 方法二：位运算
 
+
+---
 ## 69. Sqrt(x)
 
 给你一个非负整数 x ，计算并返回 x 的 算术平方根 。
@@ -1989,6 +2088,8 @@ console.log(result);
 
 牛顿迭代法，或其他函数代替
 
+
+---
 ## 70.爬楼梯
 
 假设你正在爬楼梯。需要 n 阶你才能到达楼顶。
@@ -2053,6 +2154,8 @@ var climbStairs = function(n) {
 
 方法三：通项公式
 
+
+---
 ## 71. 简化路径
 
 给你一个字符串 path ，表示指向某一文件或目录的 Unix 风格 绝对路径 （以 '/' 开头），请你将其转化为更加简洁的规范路径。
@@ -2104,6 +2207,8 @@ console.log(result);
 
 
 
+
+---
 ## 83.删除排序链表中的重复元素
 
 存在一个按升序排列的链表，给你这个链表的头节点 head ，请你删除所有重复的元素，使每个元素 只出现一次 。
@@ -2190,6 +2295,8 @@ let result=deleteDuplicates(head1)
 console.log(result);
 ```
 
+
+---
 ## 88.合并两个有序数组
 
 给你两个按 **非递减顺序** 排列的整数数组 nums1 和 nums2，另有两个整数 m 和 n ，分别表示 nums1 和 nums2 中的元素数目。
@@ -2303,6 +2410,8 @@ var merge = function(nums1, m, nums2, n) {
 };
 ```
 
+
+---
 ## 89.格雷编码
 
 n 位格雷码序列 是一个由 2n 个整数组成的序列，其中：
@@ -2388,6 +2497,8 @@ console.log(result);
 
 
 
+
+---
 ## 94.二叉树的中序遍历
 
 给定一个二叉树的根节点 root ，返回它的 中序 遍历。
@@ -2503,6 +2614,8 @@ var inorderTraversal = function(root) {
 };
 ```
 
+
+---
 ## 100.相同的树
 
 给你两棵二叉树的根节点 p 和 q ，编写一个函数来检验这两棵树是否相同。
@@ -2605,6 +2718,8 @@ var isSameTree = function(p, q) {
 };
 ```
 
+
+---
 ## 101.对称二叉树
 
 给定一个二叉树，检查它是否是镜像对称的。
@@ -2694,6 +2809,8 @@ var isSymmetric = function(root) {
 
 ```
 
+
+---
 ## 104.二叉树的最大深度
 
 给定一个二叉树，找出其最大深度。
@@ -2763,6 +2880,8 @@ var maxDepth = function(root) {
 };
 ```
 
+
+---
 ## 108. 将有序数组转换为二叉搜索树
 
 给你一个整数数组 nums ，其中元素已经按 升序 排列，请你将其转换为一棵 高度平衡 二叉搜索树。
@@ -2873,6 +2992,8 @@ function helper(nums,left,right){
 }
 ```
 
+
+---
 ## 110.平衡二叉树
 
 给定一个二叉树，判断它是否是高度平衡的二叉树。
@@ -2961,6 +3082,8 @@ function getHeight(root){
 }
 ```
 
+
+---
 ## 111.二叉树的最小深度
 
 给定一个二叉树，找出其最小深度。
@@ -3065,6 +3188,8 @@ var minDepth = function(root) {
 };
 ```
 
+
+---
 ## 112.路径总和
 
 给你二叉树的根节点 root 和一个表示目标和的整数 targetSum 。判断该树中是否存在 根节点到叶子节点 的路径，这条路径上所有节点值相加等于目标和 targetSum 。如果存在，返回 true ；否则，返回 false 。
@@ -3140,6 +3265,8 @@ var hasPathSum = function(root, targetSum) {
 };
 ```
 
+
+---
 ## 118.杨辉三角
 
 给定一个非负整数 numRows，生成「杨辉三角」的前 numRows 行。
@@ -3173,6 +3300,8 @@ let result=generate(test);
 console.log(result);
 ```
 
+
+---
 ## 119.杨辉三角 II
 
 给定一个非负索引 rowIndex，返回「杨辉三角」的第 rowIndex 行。
@@ -3206,6 +3335,8 @@ let result=getRow(test);
 console.log(result);
 ```
 
+
+---
 ## 121.买卖股票的最佳时机 
 
 给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。
@@ -3256,6 +3387,8 @@ var maxProfit = function(prices) {
 };
 ```
 
+
+---
 ## 125.  验证回文串
 
 给定一个字符串，验证它是否是回文串，只考虑字母和数字字符，可以忽略字母的大小写。
@@ -3286,6 +3419,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 136. 只出现一次的数字
 
 给定一个**非空**整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
@@ -3314,6 +3449,8 @@ let result=singleNumber(test);
 console.log(result);
 ```
 
+
+---
 ## 141.环形链表
 
 给你一个链表的头节点 head ，判断链表中是否有环。
@@ -3390,6 +3527,8 @@ var hasCycle = function(head) {
 };
 ```
 
+
+---
 ## 144.二叉树的前序遍历
 
 给你二叉树的根节点 root ，返回它节点值的 前序 遍历。
@@ -3506,6 +3645,8 @@ var preorderTraversal = function(root) {
 };
 ```
 
+
+---
 ## 145.二叉树的后序遍历
 
 给你一棵二叉树的根节点 root ，返回其节点值的 后序遍历 。
@@ -3557,6 +3698,32 @@ var postorderTraversal = function(root) {
 };
 ```
 
+---
+
+
+---
+## 152. 乘积最大子数组
+
+给你一个整数数组 nums ，请你找出数组中乘积最大的非空连续子数组（该子数组中至少包含一个数字），并返回该子数组所对应的乘积。
+
+测试用例的答案是一个 32-位 整数。
+
+子数组 是数组的连续子序列。
+
+提示:
+
+1 <= nums.length <= 2 * 104
+-10 <= nums[i] <= 10
+nums 的任何前缀或后缀的乘积都 保证 是一个 32-位 整数
+
+```
+
+```
+
+----
+
+
+---
 ## 155.最小栈
 
 设计一个支持 push ，pop ，top 操作，并能在常数时间内检索到最小元素的栈。
@@ -3623,6 +3790,8 @@ MinStack.prototype.getMin = function() {
  */
 ```
 
+
+---
 ## 160.相交链表
 
 给你两个单链表的头节点 headA 和 headB ，**请你找出并返回两个单链表相交的起始节点。如果两个链表不存在相交节点，返回 null 。**
@@ -3708,6 +3877,8 @@ var getIntersectionNode = function(headA, headB) {
 };
 ```
 
+
+---
 ## 168. Excel表列名称
 
 给你一个整数 columnNumber ，返回它在 Excel 表中相对应的列名称。
@@ -3760,6 +3931,8 @@ var convertToTitle = function(columnNumber) {
 };
 ```
 
+
+---
 ## 169. 多数元素
 
 给定一个大小为 n 的数组，找到其中的多数元素。多数元素是指在数组中出现次数 大于 ⌊ n/2 ⌋ 的元素。
@@ -3802,6 +3975,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 171. Excel 表列序号
 
 给你一个字符串 columnTitle ，表示 Excel 表格中的列名称。返回 该列名称对应的列序号 。
@@ -3827,6 +4002,8 @@ let result=titleToNumber(test);
 console.log(result);
 ```
 
+
+---
 ## 172. 阶乘后的零
 
 给定一个整数 n ，返回 n! 结果中尾随零的数量。
@@ -3870,6 +4047,8 @@ var trailingZeroes = function(n) {
 
 
 
+
+---
 ## 175. 组合两个表
 
 编写一个 SQL 查询，满足条件：无论 person 是否有地址信息，都需要基于上述两表提供 person 的以下信息：
@@ -3884,6 +4063,8 @@ from Person left join Address
 on Person.PersonId=Address.PersonId;
 ```
 
+
+---
 ## 181. 超过经理收入的员工
 
 Employee 表包含所有员工，他们的经理也属于员工。每个员工都有一个 Id，此外还有一列对应员工的经理的 Id。
@@ -3901,6 +4082,8 @@ from Employee as a join Employee as b
 on a.ManagerId=b.Id and a.Salary>b.Salary;
 ```
 
+
+---
 ## 182. 查找重复的电子邮箱
 
 编写一个 SQL 查询，查找 Person 表中所有重复的电子邮箱。
@@ -3917,6 +4100,8 @@ select Email from (
 select Email from Person group by Email having count(Email) >1;
 ```
 
+
+---
 ## 183. 从不订购的客户
 
 某网站包含两个表，Customers 表和 Orders 表。编写一个 SQL 查询，找出所有从不订购任何东西的客户。
@@ -3928,6 +4113,8 @@ where customers.id not in (
 );
 ```
 
+
+---
 ## 190. 颠倒二进制位
 
 颠倒给定的 32 位无符号整数的二进制位。
@@ -3969,6 +4156,8 @@ var reverseBits = function(n) {
 };
 ```
 
+
+---
 ## 191. 位1的个数
 
 编写一个函数，输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为汉明重量）。
@@ -4006,6 +4195,8 @@ var hammingWeight = function(n) {
 };
 ```
 
+
+---
 ## 193. 有效电话号码
 
 给定一个包含电话号码列表（一行一个电话号码）的文本文件 file.txt，写一个单行 bash 脚本输出所有有效的电话号码。
@@ -4022,6 +4213,8 @@ awk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/' file.txt
 gawk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/' file.txt
 ```
 
+
+---
 ## 195. 第十行
 
 给定一个文本文件 file.txt，请只打印这个文件中的第十行。
@@ -4037,6 +4230,8 @@ sed -n 10p file.txt
 tail -n +10 file.txt|head -1
 ```
 
+
+---
 ## 196. 删除重复的电子邮箱
 
 编写一个 SQL 查询，来删除 Person 表中所有重复的电子邮箱，重复的邮箱里只保留 Id 最小 的那个。
@@ -4050,6 +4245,8 @@ delete p1 from Person p1,Person p2
 where p1.Email=p2.Email and p1.Id>p2.Id;
 ```
 
+
+---
 ## 197. 上升的温度
 
 编写一个 SQL 查询，来查找与之前（昨天的）日期相比温度更高的所有日期的 id 。
@@ -4062,6 +4259,8 @@ from weather join weather w on DATEDIFF(weather.recordDate,w.recordDate)=1
  and weather.Temperature>w.Temperature;
 ```
 
+
+---
 ## 202. 快乐数
 
 编写一个算法来判断一个数 n 是不是快乐数。
@@ -4104,6 +4303,8 @@ let result=isHappy(test);
 console.log(result);
 ```
 
+
+---
 ## 203. 移除链表元素
 
 给你一个链表的头节点 head 和一个整数 val ，请你删除链表中所有满足 Node.val == val 的节点，并返回 新的头节点 。
@@ -4151,6 +4352,8 @@ var removeElements = function(head, val) {
 };
 ```
 
+
+---
 ## 205. 同构字符串
 
 给定两个字符串 s 和 t ，判断它们是否是同构的。
@@ -4199,6 +4402,8 @@ let result=isIsomorphic(test,"title");
 console.log(result);
 ```
 
+
+---
 ## 206. 反转链表
 
 给你单链表的头节点 head ，请你反转链表，并返回反转后的链表。
@@ -4247,6 +4452,8 @@ var reverseList = function(head) {
 
 
 
+
+---
 ## 208. 实现 Trie (前缀树)
 
 Trie（发音类似 "try"）或者说 前缀树 是一种树形数据结构，用于高效地存储和检索字符串数据集中的键。这一数据结构有相当多的应用情景，例如自动补完和拼写检查。
@@ -4344,6 +4551,8 @@ result=test.search("app");
 console.log(result);  //
 ```
 
+
+---
 ## 217. 存在重复元素
 
 给定一个整数数组，判断是否存在重复元素。如果存在一值在数组中出现至少两次，函数返回 `true` 。如果数组中每个元素都不相同，则返回 `false` 。
@@ -4370,6 +4579,8 @@ let result=containsDuplicate(test);
 console.log(result);
 ```
 
+
+---
 ## 219. 存在重复元素 II
 
 给你一个整数数组 nums 和一个整数 k ，判断数组中是否存在两个 不同的索引 i 和 j ，满足 nums[i] == nums[j] 且 abs(i - j) <= k 。如果存在，返回 true ；否则，返回 false 。
@@ -4424,6 +4635,8 @@ var containsNearbyDuplicate = function(nums, k) {
 
 ```
 
+
+---
 ## 225. 用队列实现栈
 
 请你仅使用两个队列实现一个后入先出（LIFO）的栈，并支持普通栈的全部四种操作（push、top、pop 和 empty）。
@@ -4544,6 +4757,8 @@ MyStack.prototype.empty = function() {
 };
 ```
 
+
+---
 ## 226. 翻转二叉树
 
 给你一棵二叉树的根节点 root ，翻转这棵二叉树，并返回其根节点。
@@ -4591,6 +4806,8 @@ var invertTree = function(root) {
 };
 ```
 
+
+---
 ## 228. 汇总区间
 
 给定一个  无重复元素 的 有序 整数数组 nums 。
@@ -4667,6 +4884,8 @@ var summaryRanges = function(nums) {
 };
 ```
 
+
+---
 ## 231. 2 的幂
 
 给你一个整数 n，请你判断该整数是否是 2 的幂次方。如果是，返回 true ；否则，返回 false 。
@@ -4713,6 +4932,8 @@ var isPowerOfTwo = function(n) {
 };
 ```
 
+
+---
 ## 232. 用栈实现队列
 
 请你仅使用两个栈实现先入先出队列。队列应当支持一般队列支持的所有操作（push、pop、peek、empty）：
@@ -4841,6 +5062,8 @@ MyQueue.prototype.empty = function() {
  */
 ```
 
+
+---
 ## 234. 回文链表
 
 给你一个单链表的头节点 head ，请你判断该链表是否为回文链表。如果是，返回 true ；否则，返回 false 。
@@ -4905,6 +5128,8 @@ var isPalindrome = function(head) {
 };
 ```
 
+
+---
 ## 235. 二叉搜索树的最近公共祖先
 
 给定一个二叉搜索树, 找到该树中两个指定节点的最近公共祖先。
@@ -4948,6 +5173,8 @@ var lowestCommonAncestor = function(root, p, q) {
 };
 ```
 
+
+---
 ## 237. 删除链表中的节点
 
 请编写一个函数，用于 删除单链表中某个特定节点 。在设计函数时需要注意，你无法访问链表的头节点 head ，只能直接访问 要被删除的节点 。
@@ -4985,6 +5212,8 @@ var deleteNode = function(node) {
 };
 ```
 
+
+---
 ## 242.  有效的字母异位词
 
 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
@@ -5045,6 +5274,8 @@ console.log(result);
 
 
 
+
+---
 ## 257. 二叉树的所有路径
 
 给你一个二叉树的根节点 root ，按 任意顺序 ，返回所有从根节点到叶子节点的路径。
@@ -5102,6 +5333,8 @@ var binaryTreePaths = function(root) {
 
 ```
 
+
+---
 ## 258. 各位相加
 
 给定一个非负整数 num，反复将各个位上的数字相加，直到结果为一位数。返回这个结果。
@@ -5164,6 +5397,8 @@ let result=addDigits(test);
 console.log(result);
 ```
 
+
+---
 ## 263. 丑数
 
 给你一个整数 n ，请你判断 n 是否为 丑数 。如果是，返回 true ；否则，返回 false 。
@@ -5196,6 +5431,8 @@ let result=isUgly(test);
 console.log(result);
 ```
 
+
+---
 ## 268. 丢失的数字
 
 给定一个包含 [0, n] 中 n 个数的数组 nums ，找出 [0, n] 这个范围内没有出现在数组中的那个数。
@@ -5287,6 +5524,8 @@ var missingNumber = function(nums) {
 
 ```
 
+
+---
 ## 278. 第一个错误的版本
 
 你是产品经理，目前正在带领一个团队开发新的产品。不幸的是，你的产品的最新版本没有通过质量检测。由于每个版本都是基于之前的版本开发的，所以错误的版本之后的所有版本都是错的。
@@ -5340,6 +5579,8 @@ var solution = function(isBadVersion) {
 
 
 
+
+---
 ## 283. 移动零
 
 给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
@@ -5399,7 +5640,9 @@ console.log(result);
 
 ```
 
-## 190. 单词规律
+
+---
+## 290. 单词规律
 
 给定一种规律 pattern 和一个字符串 str ，判断 str 是否遵循相同的规律。
 
@@ -5445,6 +5688,8 @@ let result=wordPattern("abba",test);
 console.log(result);
 ```
 
+
+---
 ## 292. Nim 游戏
 
 你和你的朋友，两个人一起玩 Nim 游戏：
@@ -5473,6 +5718,8 @@ let result=canWinNim(test);
 console.log(result);
 ```
 
+
+---
 ## 303. 区域和检索 - 数组不可变
 
 给定一个整数数组  nums，处理以下类型的多个查询:
@@ -5548,6 +5795,8 @@ NumArray.prototype.sumRange = function(left, right) {
 
 ```
 
+
+---
 ## 306.累加数
 
 累加数 是一个字符串，组成它的数字可以形成累加序列。
@@ -5601,6 +5850,8 @@ let result=isAdditiveNumber(test);
 console.log(result);
 ```
 
+
+---
 ## 307.区域和检索 - 数组可修改
 
 给你一个数组 nums ，请你完成两类查询。
@@ -5654,6 +5905,8 @@ NumArray.prototype.sumRange = function(left, right) {
 };
 ```
 
+
+---
 ## 310. 最小高度树
 
 树是一个无向图，其中任何两个顶点只通过一条路径连接。 换句话说，一个任何没有简单环路的连通图都是一棵树。
@@ -5737,6 +5990,8 @@ console.log(result);
 
 
 
+
+---
 ## 326. 3 的幂
 
 给定一个整数，写一个函数来判断它是否是 3 的幂次方。如果是，返回 true ；否则，返回 false 。
@@ -5772,6 +6027,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 334.递增的三元子序列
 
 给你一个整数数组 nums ，判断这个数组中是否存在长度为 3 的递增子序列。
@@ -5871,8 +6128,12 @@ console.log(result);
 
 ![递增的三元子序列（贪心）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（贪心）.png)
 
+
+---
 ## 
 
+
+---
 ## 338. 比特位计数
 
 给你一个整数 n ，对于 0 <= i <= n 中的每个 i ，计算其二进制表示中 1 的个数 ，返回一个长度为 n + 1 的数组 ans 作为答案。
@@ -5981,6 +6242,8 @@ var countBits = function(n) {
 
 
 
+
+---
 ## 342. 4的幂
 
 给定一个整数，写一个函数来判断它是否是 4 的幂次方。如果是，返回 true ；否则，返回 false 。
@@ -6013,6 +6276,8 @@ var isPowerOfFour = function(n) {
 };
 ```
 
+
+---
 ## 344. 反转字符串
 
 编写一个函数，其作用是将输入的字符串反转过来。输入字符串以字符数组 s 的形式给出。
@@ -6050,6 +6315,8 @@ var reverseString = function(s) {
 
 ```
 
+
+---
 ## 345. 反转字符串中的元音字母
 
 给你一个字符串 s ，仅反转字符串中的所有元音字母，并返回结果字符串。
@@ -6091,6 +6358,8 @@ let result=reverseVowels(test);
 console.log(result);
 ```
 
+
+---
 ## 349. 两个数组的交集
 
 给定两个数组 nums1 和 nums2 ，返回 它们的交集 。输出结果中的每个元素一定是 唯一 的。我们可以 不考虑输出结果的顺序 。
@@ -6147,6 +6416,8 @@ var intersection = function(nums1, nums2) {
 
 ```
 
+
+---
 ## 350. 两个数组的交集 II
 
 给你两个整数数组 nums1 和 nums2 ，请你以数组形式返回两数组的交集。返回结果中每个元素出现的次数应与元素在两个数组中都出现的次数一致（如果出现次数不一致，则考虑取较小值）。可以不考虑输出结果的顺序。
@@ -6193,6 +6464,8 @@ var intersect = function(nums1, nums2) {
 };
 ```
 
+
+---
 ## 357. 统计各位数字都不同的数字个数
 
 给你一个整数 n ，统计并返回各位数字都不同的数字 x 的个数，其中 0 <= x < 10n 。
@@ -6257,6 +6530,8 @@ console.log(result);
 
 
 
+
+---
 ## 367. 有效的完全平方数
 
 给定一个 正整数 num ，编写一个函数，如果 num 是一个完全平方数，则返回 true ，否则返回 false 。
@@ -6300,6 +6575,8 @@ console.log(result);
 
 
 
+
+---
 ## 373.查找和最小的K对数字
 
 给定两个以升序排列的整数数组 nums1 和 nums2 , 以及一个整数 k 。
@@ -6382,6 +6659,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 374. 猜数字大小
 
 猜数字游戏的规则如下：
@@ -6494,6 +6773,8 @@ RandomizedSet.prototype.getRandom = function() {
 
 
 
+
+---
 ## 383. 赎金信
 
 给你两个字符串：ransomNote 和 magazine ，判断 ransomNote 能不能由 magazine 里面的字符构成。
@@ -6539,6 +6820,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 385.迷你语法分析器
 
 给定一个字符串 s 表示一个整数嵌套列表，实现一个解析它的语法分析器并返回解析的结果 NestedInteger 。
@@ -6634,6 +6917,8 @@ const isDigit = (ch) => {
 
 ```
 
+
+---
 ## 386.字典序排数
 
 给你一个整数 n ，按字典序返回范围 [1, n] 内所有整数。
@@ -6790,6 +7075,8 @@ var lengthLongestPath = function(input) {
 
 
 
+
+---
 ## 389. 找不同
 
 给定两个字符串 s 和 t ，它们只包含小写字母。
@@ -6873,6 +7160,8 @@ var findTheDifference = function(s, t) {
 
 
 
+
+---
 ## 390. 消除游戏
 
 列表 arr 由在范围 [1, n] 中的所有整数组成，并按严格递增排序。请你对 arr 应用下述算法：
@@ -6934,6 +7223,8 @@ console.log(lastRemaining(50));
 
 - 空间复杂度：O(1)。只需要使用常数的额外空间。
 
+
+---
 ## 392. 判断子序列
 
 给定字符串 s 和 t ，判断 s 是否为 t 的子序列。
@@ -7042,6 +7333,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 393. UTF-8 编码验证
 
 给定一个表示数据的整数数组 data ，返回它是否为有效的 UTF-8 编码。
@@ -7106,6 +7399,8 @@ let result=validUtf8(data);
 console.log(result);
 ```
 
+
+---
 ## 396. 旋转函数
 
 给定一个长度为 n 的整数数组 nums 。
@@ -7172,6 +7467,8 @@ var maxRotateFunction = function(nums) {
 };
 ```
 
+
+---
 ## 398. 随机数索引
 
 给你一个可能含有 重复元素 的整数数组 nums ，请你随机输出给定的目标数字 target 的索引。你可以假设给定的数字一定存在于数组中。
@@ -7238,6 +7535,8 @@ Solution.prototype.pick = function(target) {
 
 
 
+
+---
 ## 401. 二进制手表
 
 二进制手表顶部有 4 个 LED 代表 小时（0-11），底部的 6 个 LED 代表 分钟（0-59）。每个 LED 代表一个 0 或 1，最低位在右侧。
@@ -7313,6 +7612,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 404. 左叶子之和
 
 给定二叉树的根节点 root ，返回所有左叶子之和。
@@ -7400,6 +7701,8 @@ var isLeafNode=function(root){
 }
 ```
 
+
+---
 ## 405. 数字转换为十六进制数
 
 给定一个整数，编写一个算法将这个数转换为十六进制数。对于负整数，我们通常使用 补码运算 方法。
@@ -7439,6 +7742,8 @@ let result=toHex(test);
 console.log(result);
 ```
 
+
+---
 ## 409. 最长回文串
 
 给定一个包含大写字母和小写字母的字符串 s ，返回 通过这些字母构造成的 最长的回文串 。
@@ -7476,6 +7781,8 @@ let result=longestPalindrome(test);
 console.log(result);
 ```
 
+
+---
 ## 412. Fizz Buzz
 
 给你一个整数 n ，找出从 1 到 n 各个整数的 Fizz Buzz 表示，并用字符串数组 answer（下标从 1 开始）返回结果，其中：
@@ -7517,6 +7824,8 @@ let result=fizzBuzz(n);
 console.log(result);
 ```
 
+
+---
 ## 414. 第三大的数
 
 给你一个非空数组，返回此数组中 第三大的数 。如果不存在，则返回数组中最大的数。
@@ -7567,6 +7876,8 @@ let result=thirdMax(nums);
 console.log(result);
 ```
 
+
+---
 ## 415. 字符串相加
 
 给定两个字符串形式的非负整数 num1 和num2 ，计算它们的和并同样以字符串形式返回。
@@ -7636,6 +7947,8 @@ var addStrings = function(num1, num2) {
 
 ```
 
+
+---
 ## 417. 太平洋大西洋水流问题
 
 有一个 m × n 的矩形岛屿，与 太平洋 和 大西洋 相邻。 “太平洋” 处于大陆的左边界和上边界，而 “大西洋” 处于大陆的右边界和下边界。
@@ -7768,6 +8081,8 @@ var pacificAtlantic = function(heights) {
 
 
 
+
+---
 ## 420. 强密码检验器
 
 如果一个密码满足下述所有条件，则认为这个密码是强密码：
@@ -7888,6 +8203,8 @@ const isDigit = (ch) => {
 
 ```
 
+
+---
 ## 427. 建立四叉树
 
 给你一个 n * n 矩阵 grid ，矩阵由若干 0 和 1 组成。请你用四叉树表示该矩阵 grid 。
@@ -7956,6 +8273,8 @@ console.log(result);
 
 
 
+
+---
 ## 429.N 叉树的层序遍历
 
 给定一个 N 叉树，返回其节点值的层序遍历。（即从左到右，逐层遍历）。
@@ -8001,6 +8320,8 @@ var levelOrder = function(root) {
 
 
 
+
+---
 ## 432. 全 O(1) 的数据结构
 
 请你设计一个用于存储字符串计数的数据结构，并能够返回计数最小和最大的字符串。
@@ -8143,6 +8464,8 @@ class Node {
 
 ```
 
+
+---
 ## 433. 最小基因变化
 
 基因序列可以表示为一条由 8 个字符组成的字符串，其中每个字符都是 'A'、'C'、'G' 和 'T' 之一。
@@ -8210,6 +8533,8 @@ let result=minMutation(start,end,bank);
 console.log(result);
 ```
 
+
+---
 ## 442. 数组中重复的数据
 
 给你一个长度为 n 的整数数组 nums ，其中 nums 的所有整数都在范围 [1, n] 内，且每个整数出现 一次 或 两次 。请你找出所有出现 两次 的整数，并以数组形式返回。
@@ -8267,7 +8592,94 @@ console.log(result);
 ```
 
 
+---
+## 449.序列化和反序列化二叉搜索树
 
+序列化是将数据结构或对象转换为一系列位的过程，以便它可以存储在文件或内存缓冲区中，或通过网络连接链路传输，以便稍后在同一个或另一个计算机环境中重建。
+
+设计一个算法来序列化和反序列化 二叉搜索树 。 对序列化/反序列化算法的工作方式没有限制。 您只需确保二叉搜索树可以序列化为字符串，并且可以将该字符串反序列化为最初的二叉搜索树。
+
+编码的字符串应尽可能紧凑。
+
+提示：
+
+树中节点数范围是 [0, 104]
+0 <= Node.val <= 104
+题目数据 保证 输入的树是一棵二叉搜索树。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+
+/**
+ * Encodes a tree to a single string.
+ *
+ * @param {TreeNode} root
+ * @return {string}
+ */
+var serialize = function(root) {
+    const list=[];
+    const postOrder=(root,list)=>{
+        if (!root) {
+            return;
+        }
+        postOrder(root.left,list);
+        postOrder(root.right,list);
+        list.push(root.val);
+    }
+
+    postOrder(root,list);
+
+    const str=list.join(",");
+    return str;
+};
+
+/**
+ * Decodes your encoded data to tree.
+ *
+ * @param {string} data
+ * @return {TreeNode}
+ */
+var deserialize = function(data) {
+    if (data.length===0) {
+        return null;
+    }
+    let arr=data.split(",");
+    let n=arr.length;
+    const stack=[];
+    for(let i=0;i<n;i++){
+        stack.push(parseInt(arr[i]));
+    }
+
+    const constructTree=(lower,upper,stack)=>{
+        if (stack.length===0 || stack[stack.length-1]<lower || stack[stack.length-1]>upper) {
+            return null;
+        }
+        let val=stack.pop();
+        const root=new TreeNode(val);
+        root.right=constructTree(val,upper,stack);
+        root.left=constructTree(lower,val,stack);
+        return root;
+    }
+
+    return constructTree(-Number.MAX_SAFE_INTEGER,Number.MAX_SAFE_INTEGER,stack);
+};
+
+/**
+ * Your functions will be called as such:
+ * deserialize(serialize(root));
+ */
+```
+
+
+
+
+---
 ## 472. 连接词
 
 给你一个 不含重复 单词的字符串数组 words ，请你找出并返回 words 中的所有 连接词 。
@@ -8516,6 +8928,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 479.最大回文数乘积
 
 给定一个整数 n ，返回 可表示为两个 n 位整数乘积的 最大回文整数 。因为答案可能非常大，所以返回它对 1337 取余 。
@@ -8552,6 +8966,8 @@ console.log(result);
 
 ​     
 
+
+---
 ## 504 七进制数
 
 给定一个整数 num，将其转化为 7 进制，并以字符串形式输出。
@@ -8586,6 +9002,8 @@ console.log(result);
 
 
 
+
+---
 ## 507. 完美数
 
 对于一个 正整数，如果它和除了它自身以外的所有 正因子 之和相等，我们称它为 「完美数」。
@@ -8621,6 +9039,8 @@ let result=checkPerfectNumber(str1);
 console.log(result);
 ```
 
+
+---
 ## 521. 最长特殊序列 Ⅰ
 
 给你两个字符串 a 和 b，请返回 这两个字符串中 最长的特殊序列  的长度。如果不存在，则返回 -1 。
@@ -8677,6 +9097,8 @@ var findLUSlength = function(a, b) {
 
 
 
+
+---
 ## 537.复数乘法
 
 复数 可以用字符串表示，遵循 "实部+虚部i" 的形式，并满足下述条件：
@@ -8712,6 +9134,8 @@ console.log(result);
 
 
 
+
+---
 ## 540. 有序数组中的单一元素
 
 给你一个仅由整数组成的有序数组，其中每个元素都会出现两次，唯有一个数只会出现一次。
@@ -8752,6 +9176,8 @@ console.log(result);
 
 ![有序数组中的单一元素（全数组的二分查找）](E:\pogject\学习笔记\image\leetcode\有序数组中的单一元素（全数组的二分查找）.png)
 
+
+---
 ## 553.最优除法
 
 给定一组正整数，相邻的整数之间将会进行浮点除法操作。例如， [2,3,4] -> 2 / 3 / 4 。
@@ -8786,6 +9212,8 @@ let result=optimalDivision(test);
 console.log(result);
 ```
 
+
+---
 ## 564. 寻找最近的回文数
 
 给定一个表示整数的字符串 n ，返回与它最近的回文整数（不包括自身）。如果不止一个，返回较小的那个。
@@ -8836,6 +9264,8 @@ let result=nearestPalindromic(n);
 console.log(result);
 ```
 
+
+---
 ## 587.安装栅栏
 
 在一个二维的花园中，有一些用 (x, y) 坐标表示的树。由于安装费用十分昂贵，你的任务是先用最短的绳子围起所有的树。只有当所有的树都被绳子包围时，花园才能围好栅栏。你需要找到正好位于栅栏边界上的树的坐标。
@@ -8916,6 +9346,8 @@ const cross = (p, q, r) => {
 
 
 
+
+---
 ## 589. N 叉树的前序遍历
 
 给定一个 n 叉树的根节点  root ，返回 其节点值的 前序遍历 。
@@ -8981,6 +9413,8 @@ var postorder = function(root) {
 };
 ```
 
+
+---
 ## 590. N 叉树的后序遍历
 
 给定一个 n 叉树的根节点 root ，返回 其节点值的 后序遍历 。
@@ -9046,6 +9480,8 @@ var postorder = function(root) {
 };
 ```
 
+
+---
 ## 591. 标签验证器
 
 给定一个表示代码片段的字符串，你需要实现一个验证器来解析这段代码，并返回它是否合法。合法的代码片段需要遵守以下的所有规则：
@@ -9145,6 +9581,8 @@ console.log(result);
 
 
 
+
+---
 ## 599. 两个列表的最小索引总和
 
 假设 Andy 和 Doris 想在晚餐时选择一家餐厅，并且他们都有一个表示最喜爱餐厅的列表，每个餐厅的名字用字符串表示。
@@ -9198,6 +9636,8 @@ let result=findRestaurant(list1, list2);
 console.log(result);
 ```
 
+
+---
 ## 606. 根据二叉树创建字符串
 
 你需要采用前序遍历的方式，将一个二叉树转换成一个由括号和整数组成的字符串。
@@ -9243,6 +9683,8 @@ var tree2str = function(root) {
 
 
 
+
+---
 ## 653. 两数之和 IV - 输入 BST
 
 给定一个二叉搜索树 root 和一个目标结果 k，如果 BST 中存在两个元素且它们的和等于给定的目标结果，则返回 true。
@@ -9292,6 +9734,8 @@ var findTarget = function(root, k) {
 
 ```
 
+
+---
 ## 661. 图片平滑器
 
 图像平滑器 是大小为 3 x 3 的过滤器，用于对图像的每个单元格平滑处理，平滑处理后单元格的值为该单元格的平均灰度。
@@ -9338,6 +9782,8 @@ let result=imageSmoother(test);
 console.log(result);
 ```
 
+
+---
 ## 682. 棒球比赛
 
 你现在是一场采用特殊赛制棒球比赛的记录员。这场比赛由若干回合组成，过去几回合的得分可能会影响以后几回合的得分。
@@ -9390,6 +9836,8 @@ console.log(result);
 
 
 
+
+---
 ## 686. 重复叠加字符串匹配
 
 给定两个字符串 a 和 b，寻找重复叠加字符串 a 的最小次数，使得字符串 b 成为叠加后的字符串 a 的子串，如果不存在则返回 -1。
@@ -9474,6 +9922,8 @@ let result=repeatedStringMatch(str1,str2);
 console.log(result);
 ```
 
+
+---
 ## 688. 骑士在棋盘上的概率
 
 在一个 n x n 的国际象棋棋盘上，一个骑士从单元格 (row, column) 开始，并尝试进行 k 次移动。行和列是 从 0 开始 的，所以左上单元格是 (0,0) ，右下单元格是 (n - 1, n - 1) 。
@@ -9511,6 +9961,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 693. 交替位二进制数
 
 给定一个正整数，检查它的二进制表示是否总是 0、1 交替出现：换句话说，就是二进制表示中相邻两位的数字永不相同。
@@ -9542,6 +9994,8 @@ var hasAlternatingBits = function(n) {
 };
 ```
 
+
+---
 ## 713. 乘积小于 K 的子数组
 
 给你一个整数数组 nums 和一个整数 k ，请你返回子数组内所有元素的乘积严格小于 k 的连续子数组的数目。
@@ -9620,6 +10074,8 @@ console.log(result);
 
 
 
+
+---
 ## 717.  比特与2比特字符
 
 有两种特殊字符：
@@ -9675,6 +10131,8 @@ var isOneBitCharacter = function(bits) {
 
 ```
 
+
+---
 ## 720. 词典中最长的单词
 
 给出一个字符串数组 words 组成的一本英语词典。返回 words 中最长的一个单词，该单词是由 words 词典中其他单词逐步添加一个字母组成。
@@ -9821,6 +10279,8 @@ let result=selfDividingNumbers(left,right);
 console.log(result);
 ```
 
+
+---
 ## 744. 寻找比目标字母大的最小字母
 
 给你一个排序后的字符列表 letters ，列表中只包含小写英文字母。另给出一个目标字母 target，请你寻找在这一有序列表里比目标字母大的最小字母。
@@ -9870,6 +10330,8 @@ console.log(result);
 
 
 
+
+---
 ## 747.至少是其他数字两倍的最大数
 
 给你一个整数数组 nums ，其中总是存在 唯一的 一个最大整数 。
@@ -9919,6 +10381,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 762.二进制表示中质数个计算置位
 
 给你两个整数 left 和 right ，在闭区间 [left, right] 范围内，统计并返回 计算置位位数为质数 的整数个数。
@@ -10036,6 +10500,8 @@ const bitCount = (x) => {
 
 ```
 
+
+---
 ## 780.到达终点
 
 给定四个整数 sx , sy ，tx 和 ty，如果通过一系列的转换可以从起点 (sx, sy) 到达终点 (tx, ty)，则返回 true，否则返回 false。
@@ -10085,6 +10551,8 @@ console.log(result);
 
 
 
+
+---
 ## 796.旋转字符串
 
 给定两个字符串, s 和 goal。如果在若干次旋转操作之后，s 能变成 goal ，那么返回 true 。
@@ -10133,6 +10601,8 @@ var rotateString = function(s, goal) {
 
 
 
+
+---
 ## 798. 得分最高的最小轮调
 
 给你一个数组 nums，我们可以将它按一个非负整数 k 进行轮调，这样可以使数组变为 [nums[k], nums[k + 1], ... nums[nums.length - 1], nums[0], nums[1], ..., nums[k-1]] 的形式。此后，任何值小于或等于其索引的项都可以记作一分。
@@ -10149,6 +10619,8 @@ var rotateString = function(s, goal) {
 
 ```
 
+
+---
 ## 804.唯一摩尔斯密码词
 
 国际摩尔斯密码定义一种标准编码方式，将每个字母对应于一个由一系列点和短线组成的字符串， 比如:
@@ -10189,6 +10661,8 @@ let result=uniqueMorseRepresentations(words);
 console.log(result);
 ```
 
+
+---
 ## 806.写字符串需要的行数
 
 我们要把给定的字符串 S 从左到右写到每一行上，每一行的最大宽度为100个单位，如果我们在写某个字母的时候会使这行超过了100 个单位，那么我们应该把这个字母写到下一行。我们给定了一个数组 widths ，这个数组 widths[0] 代表 'a' 需要的单位， widths[1] 代表 'b' 需要的单位，...， widths[25] 代表 'z' 需要的单位。
@@ -10230,6 +10704,8 @@ let result=numberOfLines(widths,s);
 console.log(result);
 ```
 
+
+---
 ## 819.最常见的单词
 
 给定一个段落 (paragraph) 和一个禁用单词列表 (banned)。返回出现次数最多，同时不在禁用列表中的单词。
@@ -10278,6 +10754,8 @@ let result=mostCommonWord(paragraph,banned);
 console.log(result);
 ```
 
+
+---
 ## 821.字符的最短距离
 
 给你一个字符串 s 和一个字符 c ，且 c 是 s 中出现过的字符。
@@ -10330,6 +10808,8 @@ let result=shortestToChar(s,c);
 console.log(result);
 ```
 
+
+---
 ## 824.山羊拉丁文
 
 给你一个由若干单词组成的句子 sentence ，单词间由空格分隔。每个单词仅由大写和小写英文字母组成。
@@ -10380,6 +10860,8 @@ console.log(result);
 
 
 
+
+---
 ## 825. 适龄的朋友
 
 在社交媒体网站上有 n 个用户。给你一个整数数组 ages ，其中 ages[i] 是第 i 个用户的年龄。
@@ -10435,6 +10917,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 838. 推多米诺
 
 n 张多米诺骨牌排成一行，将每张多米诺骨牌垂直竖立。在开始时，同时把一些多米诺骨牌向左或向右推。
@@ -10513,6 +10997,8 @@ console.log(result);
 
 
 
+
+---
 ## 846. 一手顺子
 
 Alice 手中有一把牌，她想要重新排列这些牌，分成若干组，使每一组的牌数都是 groupSize ，并且由 groupSize 张连续的牌组成。
@@ -10586,6 +11072,8 @@ let groupSize = 10;
 console.log(isNStraightHand(hand,groupSize));
 ```
 
+
+---
 ## 883. 三维形体投影面积
 
 在 n x n 的网格 grid 中，我们放置了一些与 x，y，z 三轴对齐的 1 x 1 x 1 立方体。
@@ -10636,6 +11124,8 @@ console.log(result);
 
 
 
+
+---
 ## 868. 二进制间距
 
 给定一个正整数 n，找到并返回 n 的二进制表示中两个 相邻 1 之间的 最长距离 。如果不存在两个相邻的 1，返回 0 。
@@ -10693,6 +11183,8 @@ var binaryGap = function(n) {
 
 ```
 
+
+---
 ## 905. 按奇偶排序数组
 
 给你一个整数数组 nums，将 nums 中的的所有偶数元素移动到数组的前面，后跟所有奇数元素。
@@ -10731,6 +11223,8 @@ let result=sortArrayByParity(test);
 console.log(result);
 ```
 
+
+---
 ## 908. 最小差值 I
 
 给你一个整数数组 nums，和一个整数 k 。
@@ -10774,6 +11268,8 @@ console.log(result);
 
 
 
+
+---
 ## 913. 猫和老鼠
 
 两位玩家分别扮演猫和老鼠，在一张 无向 图上进行游戏，两人轮流行动。
@@ -10873,6 +11369,8 @@ let result=catMouseGame(test);
 console.log(result);
 ```
 
+
+---
 ## 917. 仅仅反转字母
 
 给你一个字符串 s ，根据下述规则反转字符串：
@@ -10965,6 +11463,8 @@ RecentCounter.prototype.ping = function(t) {
 
 
 
+
+---
 ## 937. 重新排列日志文件
 
 给你一个日志数组 logs。每条日志都是以空格分隔的字串，其第一个字为字母与数字混合的 标识符 。
@@ -11061,6 +11561,8 @@ let result=reorderLogFiles(logs);
 console.log(result);
 ```
 
+
+---
 ## 942.增减字符串匹配
 
 由范围 [0,n] 内所有整数组成的 n + 1 个整数的排列序列可以表示为长度为 n 的字符串 s ，其中:
@@ -11106,6 +11608,8 @@ console.log(result);
 
 
 
+
+---
 ## 954. 二倍数对数组
 
 给定一个长度为偶数的整数数组 arr，只有对 arr 进行重组后可以满足 “对于每个 0 <= i < len(arr) / 2，都有 arr[2 * i + 1] = 2 * arr[2 * i]” 时，返回 true；否则，返回 false。
@@ -11200,6 +11704,8 @@ console.log(result);
 
 
 
+
+---
 ## 969. 煎饼排序
 
 给你一个整数数组 arr ，请使用 煎饼翻转 完成对数组的排序。
@@ -11267,6 +11773,8 @@ console.log(result);
 
 
 
+
+---
 ## 1001. 网格照明
 
 在大小为 n x n 的网格 grid 上，每个单元格都有一盏灯，最初灯都处于 关闭 状态。
@@ -11419,6 +11927,8 @@ const hash = (x, y) => {
 
 ```
 
+
+---
 ## 1020. 飞地的数量
 
 给你一个大小为 m x n 的二进制矩阵 grid ，其中 0 表示一个海洋单元格、1 表示一个陆地单元格。
@@ -11635,6 +12145,8 @@ class UnionFind {
 
 
 
+
+---
 ## 1044.最长重复子串
 
 给你一个字符串 s ，考虑其所有 重复子串 ：即，s 的连续子串，在 s 中出现 2 次或更多次。这些出现之间可能存在重叠。
@@ -11672,6 +12184,8 @@ console.log(result);
 
 超时
 
+
+---
 ## 1154.  一年中的第几天
 
 给你一个字符串 date ，按 YYYY-MM-DD 格式表示一个 现行公元纪年法 日期。请你计算并返回该日期是当年的第几天。
@@ -11725,6 +12239,8 @@ console.log(result);
 **普通闰年:公历年份是4的倍数的，一般是闰年。（如2004年就是闰年）；
 世纪闰年:公历年份是整百数的，必须是400的倍数才是闰年（如1900年不是世纪闰年，2000年是世纪闰年）；**
 
+
+---
 ## 1185. 一周中的第几天
 
 给你一个日期，请你设计一个算法来判断它是对应一周中的哪一天。
@@ -11823,6 +12339,8 @@ let result=dayOfTheWeek(31,8,2019);
 console.log(result);
 ```
 
+
+---
 ## 1189. “气球” 的最大数量
 
 给你一个字符串 text，你需要使用 text 中的字母来拼凑尽可能多的单词 "balloon"（气球）。
@@ -11865,6 +12383,8 @@ console.log(result);
 
 
 
+
+---
 ## 1219. 黄金矿工
 
 你要开发一座金矿，地质勘测学家已经探明了这座金矿中的资源分布，并用大小为 m * n 的网格 grid 进行了标注。每个单元格中的整数就表示这一单元格中的黄金数量；如果该单元格是空的，那么就是 0。
@@ -11929,6 +12449,8 @@ let result=getMaximumGold(test);
 console.log(result);
 ```
 
+
+---
 ## 1305. 两棵二叉搜索树中的所有元素
 
 给你 root1 和 root2 这两棵二叉搜索树。请你返回一个列表，其中包含 两棵树 中的所有整数并按 升序 排序。
@@ -11982,6 +12504,8 @@ var getAllElements = function(root1, root2) {
 
 
 
+
+---
 ## 1380. 矩阵中的幸运数
 
 给你一个 m * n 的矩阵，矩阵中的数字 各不相同 。请你按 任意 顺序返回矩阵中的所有幸运数。
@@ -12037,6 +12561,8 @@ console.log(result);
 
 
 
+
+---
 ## 1405. 最长快乐字符串
 
 如果字符串中不含有任何 'aaa'，'bbb' 或 'ccc' 这样的字符串作为子串，那么该字符串就是一个「快乐字符串」。
@@ -12094,6 +12620,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 1447. 最简分数
 
 给你一个整数 n ，请你返回所有 0 到 1 之间（不包括 0 和 1）满足分母小于等于  n 的 最简 分数 。分数可以以 任意 顺序返回。
@@ -12135,6 +12663,8 @@ console.log(result);
 
 
 
+
+---
 ## 1576.替换所有的问号
 
 给你一个仅包含小写英文字母和 '?' 字符的字符串 s，请你将所有的 '?' 转换为若干小写字母，使最终的字符串不包含任何 连续重复 的字符。
@@ -12197,6 +12727,8 @@ console.log(String.fromCharCode(122));  //z
 
 ```
 
+
+---
 ## 1601. 最多可达成的换楼请求数目
 
 我们有 n 栋楼，编号从 0 到 n - 1 。每栋楼有若干员工。由于现在是换楼的季节，部分员工想要换一栋楼居住。
@@ -12265,6 +12797,8 @@ let result=maximumRequests(n,requests);
 console.log(result);
 ```
 
+
+---
 ## 1606. 找到处理最多请求的服务器
 
 你有 k 个服务器，编号为 0 到 k-1 ，它们可以同时处理多个请求组。每个服务器有无穷的计算能力但是 不能同时处理超过一个请求 。请求分配到服务器的规则如下：
@@ -12360,6 +12894,8 @@ console.log(result);
 
 
 
+
+---
 ## 1614.括号的最大嵌套深度
 
 如果字符串满足以下条件之一，则可以称之为 **有效括号字符串**（valid parentheses string，可以简写为 VPS）：
@@ -12461,6 +12997,8 @@ var maxDepth = function(s) {
 };
 ```
 
+
+---
 ## 1629.按键持续时间最长的键
 
 LeetCode 设计了一款新式键盘，正在测试其可用性。测试人员将会点击一系列键（总计 n 个），每次一个。
@@ -12511,6 +13049,8 @@ let result=slowestKey(test,"cbcd");
 console.log(result);
 ```
 
+
+---
 ## 1672.最富有客户的资产总量
 
 给你一个 m x n 的整数网格 accounts ，其中 accounts[i][j] 是第 i 位客户在第 j 家银行托管的资产数量。返回最富有客户所拥有的 资产总量 。
@@ -12548,6 +13088,8 @@ console.log(result);
 
 
 
+
+---
 ## 1705. 吃苹果的最大数目
 
 有一棵特殊的苹果树，一连 n 天，每天都可以长出若干个苹果。在第 i 天，树上会长出 apples[i] 个苹果，这些苹果将会在 days[i] 天后（也就是说，第 i + days[i] 天时）腐烂，变得无法食用。也可能有那么几天，树上不会长出新的苹果，此时用 apples[i] == 0 且 days[i] == 0 表示。
@@ -12599,6 +13141,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 1706.  球会落何处
 
  用一个大小为 m x n 的二维网格 grid 表示一个箱子。你有 n 颗球。箱子的顶部和底部都是开着的。
@@ -12617,6 +13161,8 @@ console.log(result);
 
 
 
+
+---
 ## 1719. 重构一棵树的方案数
 
 给你一个数组 pairs ，其中 pairs[i] = [xi, yi] ，并且满足：
@@ -12717,6 +13263,8 @@ let result=checkWays(test);
 console.log(result);
 ```
 
+
+---
 ## 1728. 猫和老鼠 II
 
 一只猫和一只老鼠在玩一个叫做猫和老鼠的游戏。
@@ -12907,6 +13455,8 @@ console.log(result);
 
 
 
+
+---
 ## 1748. 唯一元素的和
 
 给你一个整数数组 nums 。数组中唯一元素是那些只出现 恰好一次 的元素。
@@ -12975,6 +13525,8 @@ var sumOfUnique = function(nums) {
 
 ```
 
+
+---
 ## 1791. 找出星型图的中心节点
 
 有一个无向的 星型 图，由 n 个编号从 1 到 n 的节点组成。星型图有一个 中心 节点，并且恰有 n - 1 条边将中心节点与其他每个节点连接起来。
@@ -13015,6 +13567,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 1823. 找出游戏的获胜者
 
 共有 n 名小伙伴一起做游戏。小伙伴们围成一圈，按 顺时针顺序 从 1 到 n 编号。确切地说，从第 i 名小伙伴顺时针移动一位会到达第 (i+1) 名小伙伴的位置，其中 1 <= i < n ，从第 n 名小伙伴顺时针移动一位会回到第 1 名小伙伴的位置。
@@ -13089,6 +13643,8 @@ console.log(result);
 
 
 
+
+---
 ## 1984. 学生分数的最小差值
 
 给你一个 下标从 0 开始 的整数数组 nums ，其中 nums[i] 表示第 i 名学生的分数。另给你一个整数 k 。
@@ -13129,6 +13685,8 @@ let result=minimumDifference(test,2);
 console.log(result);
 ```
 
+
+---
 ## 1994. 好子集的数目
 
 给你一个整数数组 nums 。如果 nums 的一个子集中，所有元素的乘积可以表示为一个或多个 互不相同的质数 的乘积，那么我们称它为 好子集 。
@@ -13207,6 +13765,8 @@ console.log(result);
 
 
 
+
+---
 ## 1995. 统计特殊四元组
 
 给你一个 下标从 0 开始 的整数数组 nums ，返回满足下述条件的 不同 四元组 (a, b, c, d) 的 数目 ：
@@ -13263,6 +13823,8 @@ console.log(result);
 
 ```
 
+
+---
 ## 2006. 差的绝对值为 K 的数对数目
 
 给你一个整数数组 nums 和一个整数 k ，请你返回数对 (i, j) 的数目，满足 i < j 且 |nums[i] - nums[j]| == k 。
@@ -13322,6 +13884,8 @@ var countKDifference = function(nums, k) {
 };
 ```
 
+
+---
 ## 2016. 增量元素之间的最大差值
 
 给你一个下标从 0 开始的整数数组 nums ，该数组的大小为 n ，请你计算 nums[j] - nums[i] 能求得的 最大差值 ，其中 0 <= i < j < n 且 nums[i] < nums[j] 。
@@ -13358,6 +13922,8 @@ console.log(result);
 
 
 
+
+---
 ## 2022. 将一维数组转变成二维数组
 
 给你一个下标从 0 开始的一维整数数组 original 和两个整数 m 和  n 。你需要使用 original 中 所有 元素创建一个 m 行 n 列的二维数组。
@@ -13395,6 +13961,8 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+
+---
 ## 2024. 考试的最大困扰度
 
 一位老师正在出一场由 n 道判断题构成的考试，每道题的答案为 true （用 'T' 表示）或者 false （用 'F' 表示）。老师想增加学生对自己做出答案的不确定性，方法是 最大化 有 连续相同 结果的题数。（也就是连续出现 true 或者连续出现 false）。
@@ -13444,6 +14012,8 @@ console.log(result);
 
 
 
+
+---
 ## 2028. 找出缺失的观测数据
 
 现有一份 n + m 次投掷单个 六面 骰子的观测数据，骰子的每个面从 1 到 6 编号。观测数据中缺失了 n 份，你手上只拿到剩余 m 次投掷的数据。幸好你有之前计算过的这 n + m 次投掷数据的 平均值 。
@@ -13495,6 +14065,8 @@ console.log(result);
 
 
 
+
+---
 ## 2039. 网络空闲的时刻
 
 给你一个有 n 个服务器的计算机网络，服务器编号为 0 到 n - 1 。同时给你一个二维整数数组 edges ，其中 edges[i] = [ui, vi] 表示服务器 ui 和 vi 之间有一条信息线路，在 一秒 内它们之间可以传输 任意 数目的信息。再给你一个长度为 n 且下标从 0 开始的整数数组 patience 。
@@ -13560,6 +14132,8 @@ var networkBecomesIdle = function(edges, patience) {
 
 
 
+
+---
 ## 2043. 简易银行系统
 
 你的任务是为一个很受欢迎的银行设计一款程序，以自动化执行所有传入的交易（转账，存款和取款）。银行共有 n 个账户，编号从 1 到 n 。每个账号的初始余额存储在一个下标从 0 开始的整数数组 balance 中，其中第 (i + 1) 个账户的初始余额是 balance[i] 。
@@ -13647,6 +14221,8 @@ Bank.prototype.withdraw = function(account, money) {
 
 
 
+
+---
 ## 2044统计按位或能得到最大值的子集数目
 
 给你一个整数数组 nums ，请你找出 nums 子集 按位或 可能得到的 最大值 ，并返回按位或能得到最大值的 不同非空子集的数目 。
@@ -13714,6 +14290,8 @@ const dfs = (pos, orVal) => {
 
 ```
 
+
+---
 ## 2049. 统计最高分的节点数目
 
 给你一棵根节点为 0 的 二叉树 ，它总共有 n 个节点，节点编号为 0 到 n - 1 。同时给你一个下标从 0 开始的整数数组 parents 表示这棵树，其中 parents[i] 是节点 i 的父节点。由于节点 0 是根，所以 parents[0] == -1 。
@@ -13781,8 +14359,12 @@ let result=countHighestScoreNodes(parents);
 console.log(result);
 ```
 
+
+---
 ## 
 
+
+---
 ## 2055. 蜡烛之间的盘子
 
 给你一个长桌子，桌子上盘子和蜡烛排成一列。给你一个下标从 0 开始的字符串 s ，它只包含字符 '*' 和 '|' ，其中 '*' 表示一个 盘子 ，'|' 表示一支 蜡烛 。
@@ -13845,6 +14427,8 @@ console.log(result);
 
 
 
+
+---
 ## 2100. 适合打劫银行的日子
 
 你和一群强盗准备打劫银行。给你一个下标从 0 开始的整数数组 security ，其中 security[i] 是第 i 天执勤警卫的数量。日子从 0 开始编号。同时给你一个整数 time 。
@@ -13932,6 +14516,8 @@ var goodDaysToRobBank = function(security, time) {
 
 
 
+
+---
 ## 2104子数组范围和
 
 给你一个整数数组 nums 。nums 中，子数组的 范围 是子数组中最大元素和最小元素的差值。
